feat: add clear empty state when no notes are present

--- a/index.html
+++ b/index.html
@@ -32,7 +32,11 @@
       id="notesContainer"
       class="notes"
       aria-live="polite"
-    ></section>
+    >
+      <p id="emptyState" class="empty-state hidden">
+        No notes yet. Add your first note to get started.
+      </p>
+    </section>
   </main>
 
   <script src="app.js"></script>
